--- a/src/language/core/Semantics/Tree/SemanticTree.xml
+++ b/src/language/core/Semantics/Tree/SemanticTree.xml
@@ -40,19 +40,6 @@
         <Value Name="Path" Type="ModulePath?" />
     </Type>
 
-    <Type Name="TypeDeclaration" Base="Declaration">
-        <Nodes Name="Attribute" Type="Attribute" Override="true" />
-        <Computed Name="IsPublic" Type="bool" Body="Syntax.PubKeywordToken != null" />
-        <Computed Name="IsOpaque" Type="bool" Body="Syntax.OpaqueKeywordToken != null" />
-        <Computed Name="Name" Type="string" Body="Syntax.NameToken.Text" />
-        <Nodes Name="Parameter" Type="TypeParameter" />
-    </Type>
-
-    <Type Name="TypeParameter" Parent="TypeDeclaration">
-        <Nodes Name="Attribute" Type="Attribute" />
-        <Computed Name="Name" Type="string" Body="Syntax.NameToken.Text" />
-    </Type>
-
     <Type Name="CodeDeclaration" Base="Declaration" Parent="Document" Abstract="true">
         <Value Name="Symbol" Type="DeclarationSymbol?" />
         <Node Name="Body" Type="Expression" Optional="true" />
@@ -71,7 +58,6 @@
         <Computed Name="IsExternal" Type="bool" Body="Syntax.ExtKeywordToken != null" />
         <Value Name="Symbol" Type="DeclarationSymbol?" Override="true" />
         <Nodes Name="Parameter" Type="FunctionParameter" />
-        <Computed Name="IsFallible" Type="bool" Body="Syntax.ErrKeywordToken != null" />
         <Node Name="Body" Type="BlockExpression" Optional="true" Override="true" />
     </Type>
 
@@ -135,7 +121,7 @@
     </Type>
 
     <Type Name="ModuleExpression" Base="ValueExpression">
-        <Value Name="Name" Type="string?" />
+        <Value Name="Use" Type="UseDeclarationSemantics?" />
         <Value Name="Path" Type="ModulePath" />
     </Type>
 
@@ -418,7 +404,7 @@
     </Type>
 
     <Type Name="ModulePattern" Base="Pattern">
-        <Value Name="Name" Type="string?" />
+        <Value Name="Use" Type="UseDeclarationSemantics?" />
         <Value Name="Path" Type="ModulePath" />
         <Node Name="Alias" Type="VariablePatternBinding" Optional="true" Override="true" />
     </Type>
