Lexing, parsing, and analysis of `this` expressions.

--- a/src/language/core/Syntax/Tree/SyntaxTree.xml
+++ b/src/language/core/Syntax/Tree/SyntaxTree.xml
@@ -689,6 +689,10 @@
         <Token Name="CloseBrace" />
     </Type>
 
+    <Type Name="ThisExpression" Base="Expression">
+        <Token Name="ThisKeyword" />
+    </Type>
+
     <Type Name="IdentifierExpression" Base="Expression">
         <Token Name="Identifier" />
     </Type>
