--- a/src/language/core/Semantics/Tree/SemanticTree.xml
+++ b/src/language/core/Semantics/Tree/SemanticTree.xml
@@ -174,6 +174,7 @@
     <Type Name="LambdaExpression" Base="ValueExpression">
         <Nodes Name="Parameter" Type="LambdaParameter" />
         <Node Name="Body" Type="Expression" />
+        <Value Name="References" Type="ImmutableArray&lt;ThisExpressionSemantics&gt;" />
     </Type>
 
     <Type Name="LambdaParameter" Base="CodeParameter" Parent="LambdaExpression">
@@ -325,6 +326,8 @@
         <Nodes Name="Statement" Type="Statement" />
         <Value Name="Defers" Type="ImmutableArray&lt;DeferStatementSemantics&gt;" />
     </Type>
+
+    <Type Name="ThisExpression" Base="Expression" />
 
     <Type Name="IdentifierExpression" Base="Expression">
         <Value Name="Symbol" Type="Symbol?" />
