--- a/src/language/core/Semantics/Tree/SemanticTree.xml
+++ b/src/language/core/Semantics/Tree/SemanticTree.xml
@@ -66,6 +66,7 @@
         <Nodes Name="Attribute" Type="Attribute" Override="true" />
         <Computed Name="IsPublic" Type="bool" Body="Syntax.PubKeywordToken != null" />
         <Computed Name="IsExternal" Type="bool" Body="Syntax.ExtKeywordToken != null" />
+        <Computed Name="IsFallible" Type="bool" Body="Syntax.ErrKeywordToken != null" />
         <Value Name="Symbol" Type="DeclarationSymbol?" Override="true" />
         <Nodes Name="Parameter" Type="FunctionParameter" Separated="true" />
         <Node Name="Body" Type="BlockExpression" Optional="true" Override="true" />
@@ -171,6 +172,7 @@
     </Type>
 
     <Type Name="LambdaExpression" Base="ValueExpression">
+        <Computed Name="IsFallible" Type="bool" Body="Syntax.ErrKeywordToken != null" />
         <Nodes Name="Parameter" Type="LambdaParameter" Separated="true" />
         <Node Name="Body" Type="Expression" />
         <Value Name="References" Type="ImmutableArray&lt;ThisExpressionSemantics&gt;" />
