Attach some more semantic information to the semantic tree.

--- a/src/language/core/Semantics/Tree/SemanticTree.xml
+++ b/src/language/core/Semantics/Tree/SemanticTree.xml
@@ -70,6 +70,8 @@
         <Value Name="Symbol" Type="DeclarationSymbol?" Override="true" />
         <Nodes Name="Parameter" Type="FunctionParameter" Separated="true" />
         <Node Name="Body" Type="BlockExpression" Optional="true" Override="true" />
+        <Value Name="Calls" Type="ImmutableArray&lt;CallExpressionSemantics&gt;" />
+        <Value Name="Raises" Type="ImmutableArray&lt;RaiseExpressionSemantics&gt;" />
     </Type>
 
     <Type Name="FunctionParameter" Base="CodeParameter" Parent="FunctionDeclaration">
@@ -175,7 +177,10 @@
         <Computed Name="IsFallible" Type="bool" Body="Syntax.ErrKeywordToken != null" />
         <Nodes Name="Parameter" Type="LambdaParameter" Separated="true" />
         <Node Name="Body" Type="Expression" />
+        <Value Name="Upvalues" Type="ImmutableArray&lt;UpvalueSymbol&gt;" />
         <Value Name="References" Type="ImmutableArray&lt;ThisExpressionSemantics&gt;" />
+        <Value Name="Calls" Type="ImmutableArray&lt;CallExpressionSemantics&gt;" />
+        <Value Name="Raises" Type="ImmutableArray&lt;RaiseExpressionSemantics&gt;" />
     </Type>
 
     <Type Name="LambdaParameter" Base="CodeParameter" Parent="LambdaExpression">
